# hunter

cmake/configs/: default.cmake
cmake/projects/live/: hunter.cmake
cmake/projects/xpr/: hunter.cmake
examples/live/: CMakeLists.txt  live.cpp
examples/xpr/: CMakeLists.txt  xpr.cpp
